--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: "Kumbh Sans", sans-serif;
 }
 
+html{
+    height: 100%;
+}
+
 :root {
     font-size: 62.5%;
     /*background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
@@ -182,7 +186,7 @@ footer {
 @media only screen and (min-width: 750px) and (max-width: 1000px) {
     
     html{
-    height: 100%;
+    height: 0;
     }
     
     #container {
