--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ footer {
 @media only screen and (min-width: 750px) and (max-width: 1000px) {
     
     html{
-    height: 0;
+        all:unset;
     }
     
     #container {
