--- a/style.css
+++ b/style.css
@@ -185,6 +185,9 @@ footer {
 
 @media only screen and (min-width: 750px) and (max-width: 1000px) {
     
+    body {
+        height: 100vh;
+    }
     #container {
         width: 100%;
     }
